Fixed a bug of Safari cropping a button
"Go pro"

--- a/src/app/components/notes/notes/notes.component.sass
+++ b/src/app/components/notes/notes/notes.component.sass
@@ -272,3 +272,7 @@ div#notes #list
 div#pro-button.proButtonHidden
 
     visibility: hidden
+
+
+#notes-link
+    white-space: nowrap
